[package]
name = "rust-testcontainers"
version = "0.1.0"
edition = "2024"

[dependencies]
testcontainers = "0.24.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-postgres = "0.7.13"
redis = { version = "0.31.0", features = ["tokio-comp"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
rstest = "0.25.0"
